--- a/file1.html
+++ b/file1.html
@@ -12,7 +12,20 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <script>
-            </script>
+        <nav class="navabar navbar-defaul">
+            <div class="container">
+                <div class="navbar-header">
+                    <a href="" class="navbar-brand navbar-link">
+                        <img src="" alt="" ><strong>Wehather App</strong>
+                        <button class="navrbar-toggle collapsed " data-toggle="collapsed" data-target="navcol">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span></span>
+
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+        </nav>
     </body>
 </html>
