--- a/file1.html
+++ b/file1.html
@@ -17,12 +17,18 @@
                 <div class="navbar-header">
                     <a href="" class="navbar-brand navbar-link">
                         <img src="" alt="" ><strong>Wehather App</strong>
+                    </a>
                         <button class="navrbar-toggle collapsed " data-toggle="collapsed" data-target="navcol">
                             <span class="sr-only">Toggle navigation</span>
-                            <span></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
 
                         </button>
-                    </a>
+                  
+                </div>
+                <div class="collapse">
+                    
                 </div>
             </div>
 
