--- a/file1.html
+++ b/file1.html
@@ -27,8 +27,13 @@
                         </button>
                   
                 </div>
-                <div class="collapse">
-                    
+                <div class="collapse navbar-collapse" id="navcol">
+                    <ul class="nav navbar-nav navbar-right">
+                    <li> <a href="current.html">Current</a></li>
+                    <li><a href="forecast.html">Forecast</a></li>
+                    <li><a href="">open WEather Map</a></li>
+                </ul>
+
                 </div>
             </div>
 
