--- a/file1.html
+++ b/file1.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <title>weather app</title>
+        <title>Weather app</title>
       
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="style.css">
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,8 +16,9 @@
         <nav class="navabar navbar-defaul">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="" class="navbar-brand navbar-link">
-                        <img src="" alt="" ><strong>Wehather App</strong>
+                    
+                    <a href="" class="navbar-brand navbar-link weather">
+                        <img src="" alt="" ><strong>Weather App</strong>
                     </a>
                         <button class="navrbar-toggle collapsed " data-toggle="collapsed" data-target="navcol">
                             <span class="sr-only">Toggle navigation</span>
@@ -31,7 +33,7 @@
                     <ul class="nav navbar-nav navbar-right">
                     <li> <a href="current.html">Current</a></li>
                     <li><a href="forecast.html">Forecast</a></li>
-                    <li><a href="">open WEather Map</a></li>
+                    <li><a href="">Open Weather Map</a></li>
                 </ul>
 
                 </div>
